Fix spacing between sections

--- a/client/src/components/Game/Lobby/Lobby.scss
+++ b/client/src/components/Game/Lobby/Lobby.scss
@@ -8,6 +8,7 @@
 
   .lobby-container {
     display: flex;
+    align-items: center;
     width: 100vw;
     justify-content: center;
   }
